@@ -5,15 +5,17 @@ AUX gd-2.0.35-fontconfig.patch 606 RMD160 35cf7028df42e913999a8e8cee3fd20a849fd1
 AUX gd-2.0.35-libpng14.patch 347 RMD160 2d845e72cfe88a0b32d61efc8377b0d5aa438709 SHA1 cba6b3a13c9d35bbe3446dcf7130250e1b3958fa SHA256 b9f5e121ae652e211c866e1982bc6c37303d43b2a3df420be7069ca5fbb04bc4
 AUX gd-2.0.35-maxcolors.patch 348 RMD160 14ef5425229c5406c90beb4a8fade801cd1013bb SHA1 1da2b14b84f2f44aeac04d16cd5fd07e6272966e SHA256 c5dbbc7c1acd9e602fea8bf893333ca6258e7801761b6c899c7da62cd88cbc3b
 DIST gd-2.0.35.tar.bz2 1212730 RMD160 f452a2c333b2ba9b7b4c143983ec2af18a335516 SHA1 ccf34a610abff2dbf133a20c4d2a4aa94939018a SHA256 bf222490749d2a9a9ac3593b01eb55aed98461ff81202414707f61b42aa300f9
-EBUILD gd-2.0.35-r1.ebuild 1238 RMD160 47424c23f20db301c026d45a649793b270757722 SHA1 ca814a7bc69cc2c8804f812ae7d1386f2e08fbd0 SHA256 bba6e84fc0e5d7b2e9e287773c9397d5d0d6e00bd8ef619273e9e4a4f4077e5b
-EBUILD gd-2.0.35-r2.ebuild 1416 RMD160 3e048f308cc881702f2dea4bde0a6c5d45b96b82 SHA1 91fc8e4954cb0c3ad52cefb3c5c919331c90ea38 SHA256 832cd51c0c0cf61a2321811cc0186fc5c4d152adc970bf6c510f65597a69dd04
 EBUILD gd-2.0.35-r3.ebuild 2069 RMD160 07bac2a0afdbf407c2ffb6839d0ee7346cbad282 SHA1 b5b5b19a4b33a9f2bfe254b85c763c8e6f9bfef5 SHA256 9e31131bcb40c68bcd953796b3e1c58950af98d01ca8acd222188032b6ddc1aa
-MISC ChangeLog 15565 RMD160 493debd12470c53e0db3b89b15702b2247826412 SHA1 b649b7dd46920979eefc22fa4db5fba039db9399 SHA256 d99711d33c36899873a09bd572104b0d48446c720750ef5d90e7c89d988fb004
+MISC ChangeLog 15674 RMD160 303e7901ceccfaf65614c8bd07c195560326d8d6 SHA1 8ab4f04f1ad5b432651094a1c3c0065cc658a679 SHA256 ec13b639c729ca001044c7bbdde328c0d678e3c73a86174490cd5886f2109848
 MISC metadata.xml 1199 RMD160 d34c8a08b02ececd35c66c0c3594f326639ef8a5 SHA1 e52d9e8500558488eee80333fe2e112a23a519a5 SHA256 a670f3b0950512e392f25f290fc70b953c941cecdc6919cb38048bef2d46c843
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk61f1wACgkQuQc30/atMkBz5gCgkiST3JzAioEP7nQiGUnqDzcy
-BBgAnR3eOU5gOeSyyMj5vBO1VdarAXvi
-=fLsk
+iQEcBAEBAgAGBQJO6iMHAAoJEEdUh39IaPFNQcsH/iZH8g3vBAKUjT0XWJj77h/i
+TI/lEee+OY7pDJt+ykno9kjNeCxnF1idrYk0lT58P5EysyLPQTkMyVuwpXaYJCNy
+hCND5nSQ2UmeKpkEpG6+i6lv5LCuhumWwjFgRoQJJ/Dqbk3QsERKMHHczxDFcsHB
+9Guo1ed+FUwTffsi/W6DFji1h7JP6R1YSBMNKM8Z7rswmH676c2uOofhJUcE0NRZ
+n2ZFlekfOREuWSpgzVqHgLaxYdjbQGGJUjMi6fA0LpuwbfPh0mAOFeGwpDCxS+sn
+R/ptxAd0/VZgO+t/xXNB701jkLVh3JMlHK/d1Rr9tXEGQPiifx/aMQCSP+/qF50=
+=h7sC
 -----END PGP SIGNATURE-----
