@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.76 2011/11/05 18:24:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.77 2011/12/15 16:40:57 ssuominen Exp $
+
+  15 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -gd-2.0.35-r1.ebuild,
+  -gd-2.0.35-r2.ebuild:
+  old
 
   05 Nov 2011; Raúl Porcel <armin76@gentoo.org> gd-2.0.35-r3.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #387291
